@@ -726,20 +726,20 @@ static int	process_proxyconfig_table(const ZBX_TABLE *table, struct zbx_json_par
 	struct zbx_json_parse	jp_data, jp_row;
 	const char		*p, *pf;
 	zbx_uint64_t		recid, *p_recid = NULL;
-	zbx_vector_uint64_t	ins, moves;
+	zbx_vector_uint64_t	ins, moves, availability_hostids;
 	char			*buf = NULL, *esc, *sql = NULL, *recs = NULL;
 	size_t			sql_alloc = 4 * ZBX_KIBIBYTE, sql_offset,
 				recs_alloc = 20 * ZBX_KIBIBYTE, recs_offset = 0,
 				buf_alloc = 0;
 	DB_RESULT		result;
 	DB_ROW			row;
-	zbx_hashset_t           h_id_offsets, h_del;
+	zbx_hashset_t		h_id_offsets, h_del;
 	zbx_hashset_iter_t	iter;
 	zbx_id_offset_t		id_offset, *p_id_offset = NULL;
 	zbx_db_insert_t		db_insert;
 	zbx_vector_ptr_t	values;
-	static zbx_vector_ptr_t	skip_fields;
-	static const ZBX_TABLE	*table_items = NULL;
+	static zbx_vector_ptr_t	skip_fields, availability_fields;
+	static const ZBX_TABLE	*table_items, *table_hosts;
 
 	zabbix_log(LOG_LEVEL_DEBUG, "In %s() table:'%s'", __function_name, table->table);
 
@@ -785,6 +785,19 @@ static int	process_proxyconfig_table(const ZBX_TABLE *table, struct zbx_json_par
 		zbx_vector_ptr_append(&skip_fields, (void *)DBget_field(table_items, "lastlogsize"));
 		zbx_vector_ptr_append(&skip_fields, (void *)DBget_field(table_items, "mtime"));
 		zbx_vector_ptr_sort(&skip_fields, ZBX_DEFAULT_PTR_COMPARE_FUNC);
+	}
+
+	if (NULL == table_hosts)
+	{
+		table_hosts = DBget_table("hosts");
+
+		/* do not update existing lastlogsize and mtime fields */
+		zbx_vector_ptr_create(&availability_fields);
+		zbx_vector_ptr_append(&availability_fields, (void *)DBget_field(table_hosts, "available"));
+		zbx_vector_ptr_append(&availability_fields, (void *)DBget_field(table_hosts, "snmp_available"));
+		zbx_vector_ptr_append(&availability_fields, (void *)DBget_field(table_hosts, "ipmi_available"));
+		zbx_vector_ptr_append(&availability_fields, (void *)DBget_field(table_hosts, "jmx_available"));
+		zbx_vector_ptr_sort(&availability_fields, ZBX_DEFAULT_PTR_COMPARE_FUNC);
 	}
 
 	/* get table columns (line 3 in T1) */
@@ -905,6 +918,8 @@ static int	process_proxyconfig_table(const ZBX_TABLE *table, struct zbx_json_par
 
 	if (1 == move_out)
 		zbx_vector_uint64_create(&moves);
+
+	zbx_vector_uint64_create(&availability_hostids);
 
 	p = NULL;
 	/* iterate the entries (lines 9, 14 and 19 in T1) */
@@ -1198,6 +1213,15 @@ static int	process_proxyconfig_table(const ZBX_TABLE *table, struct zbx_json_par
 					continue;
 				}
 
+				if (table == table_hosts && FAIL != zbx_vector_ptr_bsearch(&availability_fields,
+						fields[f], ZBX_DEFAULT_PTR_COMPARE_FUNC))
+				{
+					/* host availability on server differs from local (proxy) availability - */
+					/* reset availability timestamp to re-send availability data to server   */
+					zbx_vector_uint64_append(&availability_hostids, recid);
+					continue;
+				}
+
 				zbx_snprintf_alloc(&sql, &sql_alloc, &sql_offset, "%s=", fields[f]->name);
 				rec_differ++;
 
@@ -1256,6 +1280,13 @@ static int	process_proxyconfig_table(const ZBX_TABLE *table, struct zbx_json_par
 	}
 
 	ret = (0 == ins.values_num ? SUCCEED : zbx_db_insert_execute(&db_insert));
+
+	if (0 != availability_hostids.values_num)
+	{
+		zbx_vector_uint64_sort(&availability_hostids, ZBX_DEFAULT_UINT64_COMPARE_FUNC);
+		zbx_vector_uint64_uniq(&availability_hostids, ZBX_DEFAULT_UINT64_COMPARE_FUNC);
+		DCtouch_hosts_availability(&availability_hostids);
+	}
 clean:
 	if (0 != ins.values_num)
 	{
@@ -1265,6 +1296,7 @@ clean:
 clean2:
 	zbx_hashset_destroy(&h_id_offsets);
 	zbx_hashset_destroy(&h_del);
+	zbx_vector_uint64_destroy(&availability_hostids);
 	zbx_vector_uint64_destroy(&ins);
 	if (1 == move_out)
 		zbx_vector_uint64_destroy(&moves);
